Version: 1.1.0
Date: 22/8/25
  Major Features:
    - Moved dungeons off of the oceans and into the main bulks of land.
  Minor Features:
    - JSON trades export now includes core quality information.
  Balancing:
    - Made dungeons smaller and have better loot on each planet.
    - Rebalanced dungeon difficulties to scale by distance.
    - Added Vulcanus quest that can be completed before claiming the center hex, removing the need to bring coins to Vulcanus.
    - Added per-planet global trade productivity modifiers.
      These are mod settings that can be tweaked or reverted to 0 if this change is unpreferred.
    - Added extra huge volcanic rocks to Vulcanus' first hex to help with starting up if you don't bring coins.
  Changes:
    - Fully looting dungeons now destroys their turrets and walls.
  Bugfixes:
    - Fixed /force-claim command not being able to claim liquid hexes.
    - Fixed dungeon looting quests being completed by picking up manually placed dungeon chests.
    - Fixed crash when opening trade overview while an equipment grid is open.
    - Fixed that the completion of a quest before its revelation was not revealing it.
---------------------------------------------------------------------------------------------------
Version: 1.0.18
Date: 16/7/25
  Bugfixes:
    - Hotfix for trade export notification being formatted incorrectly.
---------------------------------------------------------------------------------------------------
Version: 1.0.17
Date: 16/7/25
  Minor Features:
    - Added ability to export all trades as JSON text from trade overview.
  Bugfixes:
    - Fixed that hex core spawning was deleting entities (such as ores) incorrectly.
---------------------------------------------------------------------------------------------------
Version: 1.0.16
Date: 12/7/25
  Bugfixes:
    - Fixed crash with mods that modify steel chests.
---------------------------------------------------------------------------------------------------