@@ -202,6 +202,7 @@ hextorio-grid-rotation-mode-gleba=[planet=gleba] Grid Rotation Mode
 hextorio-hex-size-aquilo=[planet=aquilo] Hex Size
 hextorio-hex-stroke-width-aquilo=[planet=aquilo] Hex Stroke Width
 hextorio-grid-rotation-mode-aquilo=[planet=aquilo] Grid Rotation Mode
+hextorio-atomic-bomb-damage-multiplier=[item=atomic-bomb] Damage Multiplier
 hextorio-disable-hextreme-quality=Disable Hextreme Quality
 hextorio-notifications-quest-completed=Notifications: Quest Completed
 hextorio-notifications-new-catalog-entry=Notifications: New Catalog Entry
@@ -316,6 +317,7 @@ hextorio-grid-rotation-mode-gleba=How hex grids are rotated on [planet=gleba]. A
 hextorio-hex-size-aquilo=The average diameter of the hexagons on [planet=aquilo].
 hextorio-hex-stroke-width-aquilo=The thickness of the lines that separate hexes by [tile=ammoniacal-ocean] on [planet=aquilo]. Increasing this decreases hex size.
 hextorio-grid-rotation-mode-aquilo=How hex grids are rotated on [planet=aquilo]. Affects the aesthetic more than gameplay difficulty.
+hextorio-atomic-bomb-damage-multiplier=Multiplier to damage from [item=atomic-bomb]. If not nerfed, looting dungeons is too easy. Set to 1.0 for original damage.
 hextorio-disable-hextreme-quality=This mod adds a sixth quality tier. Some features are specifically designed around it, so only disable this if it's absolutely necessary.
 hextorio-notifications-quest-completed=Get notifications in chat when a quest gets completed.
 hextorio-notifications-new-catalog-entry=Get notifications in chat when a new item is discovered in the catalog.
