@@ -1,10 +1,18 @@
 
 data:extend({
     {
+        type = "double-setting",
+        setting_type = "startup",
+        name = "hextorio-atomic-bomb-damage-multiplier",
+        default_value = 0.01,
+        order = "zzy",
+    },
+
+    {
         type = "bool-setting",
         setting_type = "startup",
         name = "hextorio-disable-hextreme-quality",
         default_value = false,
         order = "zzz",
-    }
+    },
 })
