@@ -8,9 +8,10 @@ Date: 22/8/25
   Balancing:
     - Made dungeons smaller and have better loot on each planet.
     - Rebalanced dungeon difficulties to scale by distance.
+    - Dungeon walls and turrets are generally easier to kill now.
+    - Nerfed [item=atomic-bomb]. Can be tweaked or disabled in mod settings.
+    - Added per-planet global trade productivity modifiers. Can be tweaked or disabled in mod settings.
     - Added Vulcanus quest that can be completed before claiming the center hex, removing the need to bring coins to Vulcanus.
-    - Added per-planet global trade productivity modifiers.
-      These are mod settings that can be tweaked or reverted to 0 if this change is unpreferred.
     - Added extra huge volcanic rocks to Vulcanus' first hex to help with starting up if you don't bring coins.
   Changes:
     - Fully looting dungeons now destroys their turrets and walls.
